fix some glitches

--- a/_includes/head_index.html
+++ b/_includes/head_index.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>haukes blog</title>
+  <title>Haukes Blog - nur ein bisschen wirres Zeug</title>
 
   <meta name="description" content="...nur ein bisschen wirres Zeug..." />
   <meta name="HandheldFriendly" content="True" />
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="/css/main.css" />
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
 
-  <script src="https://use.fontawesome.com/71afee61e5.js"></script>
+  <script src="https://kit.fontawesome.com/a23a3d1aab.js" crossorigin="anonymous"></script>
 
   <link rel="canonical" href="http://www.h-dawg.de/" />
   <meta name="referrer" content="origin" />
