--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -1,7 +1,8 @@
 <div class="top-nav">
   <a href="/about/" title="über mich"><i class="fa fa-user"></i></a>
+  <a href="https://instagram.com/hwesselmann78" target="_blank" title="mein instagram-profil"><i class="fa-brands fa-instagram"></i></a>
   <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank" title="mein twitter-profil"><i class="fa fa-twitter"></i></a>
-  <a href="https://diasp.eu/people/25dc1520270f0133d5fd5404a6b20780" target="_blank" title="mein diaspora-profil"><i class="fa fa-share-alt-square"></i></a>
+  <a href="https://mastodon.social/web/@hwesselmann" target="_blank" title="mein mastodon-profil"><i class="fa-brands fa-mastodon"></i></a>
   <a href="http://www.linkedin.com/in/haukewesselmann" target="_blank" title="mein profil auf linkedin"><i class="fa fa-linkedin"></i></a>
   <a href="https://gitlab.com/u/{{ site.gitlab_username }}" target="_blank" title="mein zeug auf gitlab"><i class="fa fa-gitlab"></i></a>
   <a href="https://github.com/{{ site.github_username }}" target="_blank" title="mein zeug auf github"><i class="fa fa-github"></i></a>
