--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -14,7 +14,7 @@
 
       <link rel="stylesheet" type="text/css" href="/css/main.css" />
 
-      <script src="https://use.fontawesome.com/71afee61e5.js"></script>
+      <script src="https://kit.fontawesome.com/a23a3d1aab.js" crossorigin="anonymous"></script>
 
       <link rel="canonical" href="{{ page.url }}" />
       <meta name="referrer" content="origin" />
