--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" type="text/css" href="/css/main.css" />
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
 
-  <script src="https://use.fontawesome.com/71afee61e5.js"></script>
+  <script src="https://kit.fontawesome.com/a23a3d1aab.js" crossorigin="anonymous"></script>
 
   <link rel="canonical" href="/{{ page.url }}" />
   <meta name="referrer" content="origin" />
@@ -24,7 +24,6 @@
   <meta property="og:site_name" content="{{ site.title }}" />
   <meta property="og:type" content="article" />
   <meta property="og:title" content="{{ page.title }}" />
-  <meta property="og:description" content="&quot;{{ page.excerpt }}...." />
   <meta property="og:url" content="/{{ page.url }}" />
   <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}" />
   <meta property="article:modified_time" content="{{ page.date | date_to_xmlschema }}" />
@@ -34,7 +33,6 @@
 
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="{{ page.title }}" />
-  <meta name="twitter:description" content="&quot;Herzlichen Glückwunsch! Du bist jetzt Product Manager!  Ach ja, wir setzen hier das Scaled Agile Framework (SAFe) ein, Product Manager ist da ein bisschen anders als Du es vielleicht im klassischen Sinn kennst. Macht ja nix, geh mal auf scaledagile...." />
   <meta name="twitter:url" content="/{{ page.url }}" />
 
   <script type="application/ld+json">
@@ -58,7 +56,7 @@
       "description": "{{ page.excerpt }}...."
     }
   </script>
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="/rss/" />
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="/feed.xml" />
 </head>
 
 <body>
@@ -67,7 +65,7 @@
   <header class="main-header post-head no-cover">
     <nav class="main-nav  clearfix">
       <a class="back-button" href="/"><i class="fa fa-chevron-left"></i>&nbsp;Home</a>
-      <a class="subscribe-button" href="/rss/"><i class="fa fa-rss"></i>&nbsp;Abonnieren</a>
+      <a class="subscribe-button" href="/feed.xml"><i class="fa fa-rss"></i>&nbsp;Abonnieren</a>
     </nav>
   </header>
 
@@ -112,9 +110,6 @@
           </a>
           <a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}/{{ page.url }}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
             <i class="fa fa-facebook-official fa-lg"></i><span class="hidden">Facebook</span>
-          </a>
-          <a href="https://plus.google.com/share?url={{ site.url }}/{{ page.url }}" onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
-            <i class="fa fa-google-plus-square fa-lg"></i><span class="hidden">Google+</span>
           </a>
         </section>
 
