update to font awesome 6 classes

--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -44,8 +44,8 @@
       {% include social-links.html %}
       <header class="main-header tag-head no-cover">
         <nav class="main-nav overlay clearfix">
-          <a class="back-button" href="/"><i class="fa fa-chevron-left"></i>&nbsp;Home</a>
-          <a class="subscribe-button" href="/rss/"><i class="fa fa-rss"></i>&nbsp;Abonnieren</a>
+          <a class="back-button" href="/"><i class="fa-solid fa-chevron-left"></i>&nbsp;Home</a>
+          <a class="subscribe-button" href="/feed.xml"><i class="fa-solid fa-rss"></i>&nbsp;Abonnieren</a>
         </nav>
         <div class="vertical">
           <div class="main-header-content inner">
