--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -25,8 +25,8 @@
     {% include social-links.html %}
 
     <nav class="main-nav clearfix">
-      <a class="back-button" href="/"><i class="fa fa-chevron-left"></i>&nbsp;Home</a>
-      <a class="subscribe-button" href="/rss/"><i class="fa fa-rss"></i>&nbsp;Abonnieren</a>
+      <a class="back-button" href="/"><i class="fa-solid fa-chevron-left"></i>&nbsp;Home</a>
+      <a class="subscribe-button" href="/feed.xml"><i class="fa-solid fa-rss"></i>&nbsp;Abonnieren</a>
     </nav>
 
     <main class="content" role="main">
