--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -64,8 +64,8 @@
 
   <header class="main-header post-head no-cover">
     <nav class="main-nav  clearfix">
-      <a class="back-button" href="/"><i class="fa fa-chevron-left"></i>&nbsp;Home</a>
-      <a class="subscribe-button" href="/feed.xml"><i class="fa fa-rss"></i>&nbsp;Abonnieren</a>
+      <a class="back-button" href="/"><i class="fa-solid fa-chevron-left"></i>&nbsp;Home</a>
+      <a class="subscribe-button" href="/feed.xml"><i class="fa-solid fa-rss"></i>&nbsp;Abonnieren</a>
     </nav>
   </header>
 
@@ -98,18 +98,18 @@
           <h4>Hauke</h4>
           <p></p>
           <div class="author-meta">
-            <span class="author-location"><i class="fa fa-map-marker"></i>&nbsp;Dorsten, Germany</span>
-            <span class="author-link"><a href="/"><i class="fa fa-external-link"></i>&nbsp;{{ site.url }}</a></span>
+            <span class="author-location"><i class="fa-solid fa-location-dot"></i>&nbsp;Dorsten, Germany</span>
+            <span class="author-link"><a href="/"><i class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp;{{ site.url }}</a></span>
           </div>
         </section>
 
         <section class="share">
           <h4>Teilen</h4>
           <a href="https://twitter.com/share?text={{ page.title  | uri_escape }}&amp;url={{ site.url }}/{{ page.url }}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
-            <i class="fa fa-twitter fa-lg"></i><span class="hidden">Twitter</span>
+            <i class="fa-brands fa-twitter"></i><span class="hidden">Twitter</span>
           </a>
           <a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}/{{ page.url }}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
-            <i class="fa fa-facebook-official fa-lg"></i><span class="hidden">Facebook</span>
+            <i class="fa-brands fa-facebook"></i><span class="hidden">Facebook</span>
           </a>
         </section>
 
